force-app/main/default/objects/CorporateHousingRegulation__c/CorporateHousingRegulation__c.object-meta.xml
<CustomObject>
    <label>社宅規定</label>
    <nameField>
        <label>社宅規定名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>