force-app/main/default/objects/CorporateHousingRegulation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>社宅規定</relationshipLabel>
    <relationshipName>CorporateHousingRegulation_Account</relationshipName>
    <type>Lookup</type>
</CustomField>