force-app/main/default/objects/CorporateHousingRegulation__c/fields/AreaManual__c.field-meta.xml
<CustomField>
    <fullName>AreaManual__c</fullName>
    <label>面積（自動以外）</label>
    <type>TextArea</type>
</CustomField>