force-app/main/default/objects/CorporateHousingRegulation__c/fields/Article_LayingAmortization__c.field-meta.xml
<CustomField>
    <fullName>Article_LayingAmortization__c</fullName>
    <label>条文_敷引/償却</label>
    <type>TextArea</type>
</CustomField>