force-app/main/default/objects/CorporateHousingRegulation__c/fields/Article_NoticeOfCancellation__c.field-meta.xml
<CustomField>
    <fullName>Article_NoticeOfCancellation__c</fullName>
    <label>条文_借主解約予告</label>
    <type>TextArea</type>
</CustomField>