force-app/main/default/objects/CorporateHousingRegulation__c/fields/AsbestosUse__c.field-meta.xml
<CustomField>
    <fullName>AsbestosUse__c</fullName>
    <label>アスベスト使用</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>使用ＯＫ</fullName>
            </value>
            <value>
                <fullName>使用ＮＧ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>