force-app/main/default/objects/CorporateHousingRegulation__c/fields/Bearer__c.field-meta.xml
<CustomField>
    <fullName>Bearer__c</fullName>
    <label>敷引の負担者</label>
    <type>TextArea</type>
</CustomField>