force-app/main/default/objects/CorporateHousingRegulation__c/fields/BuiledingYearMonthOher__c.field-meta.xml
<CustomField>
    <fullName>BuiledingYearMonthOher__c</fullName>
    <label>築年月（その他条件）</label>
    <type>TextArea</type>
</CustomField>