force-app/main/default/objects/CorporateHousingRegulation__c/fields/CleaningFee__c.field-meta.xml
<CustomField>
    <fullName>CleaningFee__c</fullName>
    <label>清掃手配費（SNT受領）</label>
    <type>TextArea</type>
</CustomField>