force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractMoney__c.field-meta.xml
<CustomField>
    <fullName>ContractMoney__c</fullName>
    <label>契約金</label>
    <type>TextArea</type>
</CustomField>