force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ContractorChange__c</fullName>
    <label>名義変更</label>
    <type>TextArea</type>
</CustomField>