force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractPossibleJoineTo__c.field-meta.xml
<CustomField>
    <fullName>ContractPossibleJoineTo__c</fullName>
    <label>契約可能日_日後（入社）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>