force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractPossibleMarriageTo__c.field-meta.xml
<CustomField>
    <fullName>ContractPossibleMarriageTo__c</fullName>
    <label>契約可能日_日後（結婚）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>