force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractPossibleStandardDateMarriage__c.field-meta.xml
<CustomField>
    <fullName>ContractPossibleStandardDateMarriage__c</fullName>
    <label>契約可能日基準（結婚）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入籍日</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>