force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractPossibleTransferFrom__c.field-meta.xml
<CustomField>
    <fullName>ContractPossibleTransferFrom__c</fullName>
    <label>契約可能日_日前（転勤）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>