force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractUnavailableAbroadOwner__c.field-meta.xml
<CustomField>
    <fullName>ContractUnavailableAbroadOwner__c</fullName>
    <label>契約不可（海外家主）</label>
    <type>TextArea</type>
</CustomField>