force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractUnavailableContractShape__c.field-meta.xml
<CustomField>
    <fullName>ContractUnavailableContractShape__c</fullName>
    <label>契約不可（契約形態）</label>
    <type>TextArea</type>
</CustomField>