force-app/main/default/objects/CorporateHousingRegulation__c/fields/ContractUnavailableLender__c.field-meta.xml
<CustomField>
    <fullName>ContractUnavailableLender__c</fullName>
    <label>契約不可（貸主等）</label>
    <type>TextArea</type>
</CustomField>