force-app/main/default/objects/CorporateHousingRegulation__c/fields/DailyAmount__c.field-meta.xml
<CustomField>
    <fullName>DailyAmount__c</fullName>
    <label>請求日割金額</label>
    <type>TextArea</type>
</CustomField>