force-app/main/default/objects/CorporateHousingRegulation__c/fields/DecisionType__c.field-meta.xml
<CustomField>
    <fullName>DecisionType__c</fullName>
    <label>決裁種別(新規)</label>
    <type>TextArea</type>
</CustomField>