force-app/main/default/objects/CorporateHousingRegulation__c/fields/DecisionTypeRE__c.field-meta.xml
<CustomField>
    <fullName>DecisionTypeRE__c</fullName>
    <label>決裁種別(更新)</label>
    <type>TextArea</type>
</CustomField>