force-app/main/default/objects/CorporateHousingRegulation__c/fields/delArticleContentAddition__c.field-meta.xml
<CustomField>
    <fullName>delArticleContentAddition__c</fullName>
    <label>(削除)条文追加内容</label>
    <type>TextArea</type>
</CustomField>