force-app/main/default/objects/CorporateHousingRegulation__c/fields/delContractAdministrativeFeeCharges__c.field-meta.xml
<CustomField>
    <fullName>delContractAdministrativeFeeCharges__c</fullName>
    <label>(削除)契約事務手数料</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>発生ＯＫ</fullName>
            </value>
            <value>
                <fullName>発生ＮＧ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>