force-app/main/default/objects/CorporateHousingRegulation__c/fields/delFireInsurance__c.field-meta.xml
<CustomField>
    <fullName>delFireInsurance__c</fullName>
    <label>(削除)火災保険</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>貸主指定必須</fullName>
            </value>
            <value>
                <fullName>任意</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>