force-app/main/default/objects/CorporateHousingRegulation__c/fields/delLegalCheck__c.field-meta.xml
<CustomField>
    <fullName>delLegalCheck__c</fullName>
    <label>(削除)リーガルチェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>