force-app/main/default/objects/CorporateHousingRegulation__c/fields/delStove__c.field-meta.xml
<CustomField>
    <fullName>delStove__c</fullName>
    <label>(削除)ストーブ分解料</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>支払可</fullName>
            </value>
            <value>
                <fullName>支払不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>