force-app/main/default/objects/CorporateHousingRegulation__c/fields/ExpirationNoticeRemarks__c.field-meta.xml
<CustomField>
    <fullName>ExpirationNoticeRemarks__c</fullName>
    <label>満了通知備考</label>
    <type>TextArea</type>
</CustomField>