force-app/main/default/objects/CorporateHousingRegulation__c/fields/FeeCheck__c.field-meta.xml
<CustomField>
    <fullName>FeeCheck__c</fullName>
    <label>SNT受領手数料チェック</label>
    <type>TextArea</type>
</CustomField>