force-app/main/default/objects/CorporateHousingRegulation__c/fields/FireInsurance__c.field-meta.xml
<CustomField>
    <fullName>FireInsurance__c</fullName>
    <label>火災保険</label>
    <type>TextArea</type>
</CustomField>