force-app/main/default/objects/CorporateHousingRegulation__c/fields/FloorPlanManual__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanManual__c</fullName>
    <label>間取り（自動以外）</label>
    <type>TextArea</type>
</CustomField>