force-app/main/default/objects/CorporateHousingRegulation__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>駐車場</label>
    <type>TextArea</type>
</CustomField>