force-app/main/default/objects/CorporateHousingRegulation__c/fields/HandoverItemsCheck__c.field-meta.xml
<CustomField>
    <fullName>HandoverItemsCheck__c</fullName>
    <label>引継ぎ事項確認</label>
    <type>TextArea</type>
</CustomField>