force-app/main/default/objects/CorporateHousingRegulation__c/fields/IncludedInRent__c.field-meta.xml
<CustomField>
    <fullName>IncludedInRent__c</fullName>
    <label>家賃規定対象</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>管理費</fullName>
            </value>
            <value>
                <fullName>共益費</fullName>
            </value>
            <value>
                <fullName>駐車場代</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>