force-app/main/default/objects/CorporateHousingRegulation__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>保険</label>
    <type>TextArea</type>
</CustomField>