force-app/main/default/objects/CorporateHousingRegulation__c/fields/Integrity__c.field-meta.xml
<CustomField>
    <fullName>Integrity__c</fullName>
    <label>退去日・解約日の整合性</label>
    <type>TextArea</type>
</CustomField>