force-app/main/default/objects/CorporateHousingRegulation__c/fields/isAdjustment__c.field-meta.xml
<CustomField>
    <fullName>isAdjustment__c</fullName>
    <label>敷金調整可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>調整可</fullName>
            </value>
            <value>
                <fullName>調整不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>