force-app/main/default/objects/CorporateHousingRegulation__c/fields/IsSelfPayPenalty__c.field-meta.xml
<CustomField>
    <fullName>IsSelfPayPenalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>違約金_自己都合自己負担</label>
    <type>Checkbox</type>
</CustomField>