force-app/main/default/objects/CorporateHousingRegulation__c/fields/IsSelfPayRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsSelfPayRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新料_自己都合自己負担</label>
    <type>Checkbox</type>
</CustomField>