force-app/main/default/objects/CorporateHousingRegulation__c/fields/KeyExchange__c.field-meta.xml
<CustomField>
    <fullName>KeyExchange__c</fullName>
    <label>鍵交換(新規)</label>
    <type>TextArea</type>
</CustomField>