force-app/main/default/objects/CorporateHousingRegulation__c/fields/KeyExchangeCH__c.field-meta.xml
<CustomField>
    <fullName>KeyExchangeCH__c</fullName>
    <label>鍵交換(入替)</label>
    <type>TextArea</type>
</CustomField>