force-app/main/default/objects/CorporateHousingRegulation__c/fields/lContractAdministrativeFeeCharges__c.field-meta.xml
<CustomField>
    <fullName>lContractAdministrativeFeeCharges__c</fullName>
    <label>契約事務手数料</label>
    <type>TextArea</type>
</CustomField>