force-app/main/default/objects/CorporateHousingRegulation__c/fields/OtherExpenses__c.field-meta.xml
<CustomField>
    <fullName>OtherExpenses__c</fullName>
    <label>その他月額費用</label>
    <type>TextArea</type>
</CustomField>