force-app/main/default/objects/CorporateHousingRegulation__c/fields/PenaltyBearer__c.field-meta.xml
<CustomField>
    <fullName>PenaltyBearer__c</fullName>
    <label>違約金の負担者</label>
    <type>TextArea</type>
</CustomField>