force-app/main/default/objects/CorporateHousingRegulation__c/fields/PenaltyManual__c.field-meta.xml
<CustomField>
    <fullName>PenaltyManual__c</fullName>
    <label>違約金（自動以外）</label>
    <type>TextArea</type>
</CustomField>