force-app/main/default/objects/CorporateHousingRegulation__c/fields/PersonalBurden__c.field-meta.xml
<CustomField>
    <fullName>PersonalBurden__c</fullName>
    <label>個人負担</label>
    <type>TextArea</type>
</CustomField>