force-app/main/default/objects/CorporateHousingRegulation__c/fields/PriceIncreaseResponse__c.field-meta.xml
<CustomField>
    <fullName>PriceIncreaseResponse__c</fullName>
    <label>値上対応</label>
    <type>TextArea</type>
</CustomField>