force-app/main/default/objects/CorporateHousingRegulation__c/fields/ReApplication__c.field-meta.xml
<CustomField>
    <fullName>ReApplication__c</fullName>
    <label>再申請</label>
    <type>TextArea</type>
</CustomField>