force-app/main/default/objects/CorporateHousingRegulation__c/fields/RenewalFeeMonth__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeMonth__c</fullName>
    <label>更新料（月数）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>