force-app/main/default/objects/CorporateHousingRegulation__c/fields/RenewalTerms__c.field-meta.xml
<CustomField>
    <fullName>RenewalTerms__c</fullName>
    <label>更新条件</label>
    <type>TextArea</type>
</CustomField>