force-app/main/default/objects/CorporateHousingRegulation__c/fields/RentBankAccount__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccount__c</fullName>
    <label>家賃口座</label>
    <type>TextArea</type>
</CustomField>