force-app/main/default/objects/CorporateHousingRegulation__c/fields/ResidentsMembershipFee__c.field-meta.xml
<CustomField>
    <fullName>ResidentsMembershipFee__c</fullName>
    <label>町内会費(契約時)</label>
    <type>TextArea</type>
</CustomField>