force-app/main/default/objects/CorporateHousingRegulation__c/fields/RewardAmount__c.field-meta.xml
<CustomField>
    <fullName>RewardAmount__c</fullName>
    <label>礼金（金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>