force-app/main/default/objects/CorporateHousingRegulation__c/fields/RewardManual__c.field-meta.xml
<CustomField>
    <fullName>RewardManual__c</fullName>
    <label>礼金（自動以外）</label>
    <type>TextArea</type>
</CustomField>