force-app/main/default/objects/CorporateHousingRegulation__c/fields/RewardMonth__c.field-meta.xml
<CustomField>
    <fullName>RewardMonth__c</fullName>
    <label>礼金（月数）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>