force-app/main/default/objects/CorporateHousingRegulation__c/fields/SalaryDeductionAdvance__c.field-meta.xml
<CustomField>
    <fullName>SalaryDeductionAdvance__c</fullName>
    <label>給与控除立替</label>
    <type>TextArea</type>
</CustomField>