force-app/main/default/objects/CorporateHousingRegulation__c/fields/SanitizeFee__c.field-meta.xml
<CustomField>
    <fullName>SanitizeFee__c</fullName>
    <label>消毒費</label>
    <type>TextArea</type>
</CustomField>