force-app/main/default/objects/CorporateHousingRegulation__c/fields/SecurityDepositAmount__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositAmount__c</fullName>
    <label>敷金（金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>