force-app/main/default/objects/CorporateHousingRegulation__c/fields/SecurityDepositManual__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositManual__c</fullName>
    <label>敷金（自動以外）</label>
    <type>TextArea</type>
</CustomField>