force-app/main/default/objects/CorporateHousingRegulation__c/fields/SeismicResistanceProblem__c.field-meta.xml
<CustomField>
    <fullName>SeismicResistanceProblem__c</fullName>
    <label>耐震上の問題</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>問題有ＯＫ</fullName>
            </value>
            <value>
                <fullName>問題有ＮＧ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>