force-app/main/default/objects/CorporateHousingRegulation__c/fields/SelectionCount__c.field-meta.xml
<CustomField>
    <fullName>SelectionCount__c</fullName>
    <label>選定数</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>