force-app/main/default/objects/CorporateHousingRegulation__c/fields/SelectionRule__c.field-meta.xml
<CustomField>
    <fullName>SelectionRule__c</fullName>
    <label>不動産選定ルール</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>