force-app/main/default/objects/CorporateHousingRegulation__c/fields/ServiceContractNewMatterAgency__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractNewMatterAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_新規(不動産)</label>
    <referenceTo>ServiceContractNewMatterAgency__c</referenceTo>
    <relationshipLabel>社宅規定</relationshipLabel>
    <relationshipName>ServiceContractNewMatterAgencyCHR</relationshipName>
    <type>Lookup</type>
</CustomField>