force-app/main/default/objects/CorporateHousingRegulation__c/fields/SinkAreaSanitizeFee__c.field-meta.xml
<CustomField>
    <fullName>SinkAreaSanitizeFee__c</fullName>
    <label>水廻り消毒代</label>
    <type>TextArea</type>
</CustomField>