force-app/main/default/objects/CorporateHousingRegulation__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>構造条件</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Structure</valueSetName>
    </valueSet>
</CustomField>