force-app/main/default/objects/CorporateHousingRegulation__c/fields/StructureManual__c.field-meta.xml
<CustomField>
    <fullName>StructureManual__c</fullName>
    <label>構造（自動以外）</label>
    <type>TextArea</type>
</CustomField>