force-app/main/default/objects/CorporateHousingRegulation__c/fields/TwentyFourHoursSupportFee__c.field-meta.xml
<CustomField>
    <fullName>TwentyFourHoursSupportFee__c</fullName>
    <label>24Hサポート代(契約時)</label>
    <type>TextArea</type>
</CustomField>