force-app/main/default/objects/CorporateHousingRegulation__c/fields/TypeAndStructure__c.field-meta.xml
<CustomField>
    <fullName>TypeAndStructure__c</fullName>
    <label>タイプx構造条件</label>
    <type>TextArea</type>
</CustomField>