force-app/main/default/objects/CorporateHousingRegulation__c/fields/TypeTerms__c.field-meta.xml
<CustomField>
    <fullName>TypeTerms__c</fullName>
    <label>タイプ条件</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>