force-app/main/default/objects/CorporateHousingRegulation__c/fields/UpperLimitPenaltyMonth__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitPenaltyMonth__c</fullName>
    <label>違約金上限（月数）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>