force-app/main/default/objects/CorporateHousingRegulation__c/fields/UpperLimitPenaltyTermMonth__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitPenaltyTermMonth__c</fullName>
    <label>違約金発生期間上限（月数）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>