force-app/main/default/objects/CorporateHousingRegulation__c/fields/URRealEstate__c.field-meta.xml
<CustomField>
    <fullName>URRealEstate__c</fullName>
    <label>UR物件</label>
    <type>TextArea</type>
</CustomField>